<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    tools:context=".MainActivity"
    app:cardCornerRadius="@dimen/theme_corner_radius">
    <RelativeLayout
        android:id="@+id/rlayout_user_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/image_user_profile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="@dimen/margin_padding_tiny"
            android:src="@drawable/ic_happy_face"

            />
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/image_user_profile"
            android:layout_alignTop="@id/image_user_profile"
            android:text="@string/user_name"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_user_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/image_user_profile"
            android:layout_below="@id/tv_user_name"
            android:text="@string/user_grade"
            />
        <TextView
            android:id="@+id/tv_user_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/image_user_profile"
            android:layout_below="@id/tv_user_grade"
            android:text="@string/user_school"
            />
        <ImageButton
            android:id="@+id/button_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_small"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_options"
            android:background="null"
            />

        <ImageView
            android:id="@+id/image_user_first"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_padding_xnormal"
            android:layout_toEndOf="@id/image_user_profile"
            android:layout_below="@id/image_user_profile"
            android:src="@drawable/ic_happy_face"
            />
        <TextView
            android:layout_width="50dp"
            android:layout_height="15dp"
            android:text="@string/first_name"
            android:textSize="@dimen/text_size_small"
            android:layout_below="@id/image_user_first"
            android:layout_alignStart="@id/image_user_first"
            />
        <ImageView
            android:id="@+id/image_user_sec"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/margin_padding_xnormal"
            android:layout_alignTop="@id/image_user_first"
            android:layout_alignBottom="@id/image_user_first"
            android:layout_toEndOf="@id/image_user_first"
            android:src="@drawable/ic_happy_face"

            />
        <TextView
            android:layout_width="50dp"
            android:layout_height="15dp"
            android:text="@string/sec_name"
            android:textSize="@dimen/text_size_small"
            android:layout_below="@id/image_user_sec"
            android:layout_alignStart="@id/image_user_sec"
            />
        <ImageView
            android:id="@+id/image_user_third"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/margin_padding_xnormal"
            android:layout_alignTop="@id/image_user_first"
            android:layout_alignBottom="@id/image_user_first"
            android:layout_toEndOf="@id/image_user_sec"
            android:src="@drawable/ic_happy_face"
            />
        <TextView
            android:layout_width="50dp"
            android:layout_height="15dp"
            android:text="@string/third_name"
            android:textSize="@dimen/text_size_small"
            android:layout_below="@id/image_user_third"
            android:layout_alignStart="@id/image_user_third"
            />
        <ImageView
            android:id="@+id/image_user_optional"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_padding_xnormal"
            android:layout_alignTop="@id/image_user_first"
            android:layout_alignBottom="@id/image_user_first"
            android:layout_toEndOf="@id/image_user_third"
            android:src="@drawable/ic_happy_face"
            />
        <TextView
            android:layout_width="50dp"
            android:layout_height="15dp"
            android:text="@string/forth_name"
            android:textSize="@dimen/text_size_small"
            android:layout_below="@id/image_user_optional"
            android:layout_alignStart="@id/image_user_optional"
            />
    </RelativeLayout>
</androidx.cardview.widget.CardView>